[package]
name = "file-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
file = { path = "../../file" }
image = {version = "0.24.6", features = ["default", "webp-encoder"] }
libwebp-sys = { version = "0.9", features = ["parallel", "neon"] }