[package]
name = "file-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
file = { path = "../../file" }
image = {version = "0.24.6", features = ["default", "webp-encoder"] }
libwebp-sys = { version = "0.9", features = ["parallel", "neon"] }
threadpool = "1.8.1"
tokio = {version = "1.28.1", features = ["full"] }
chrono = "0.4.24"
moka = {version = "0.11"}
keyframe = {version = "1.1"}
keyframe_derive = {version = "1"}